# m2lang

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md  xmake.lua
cmake/modules/: AddM2lang.cmake  CMakeLists.txt  M2langConfig.cmake.in
examples/ISO/: Hello.mod  Mandelbrot.mod
examples/PIM4/: gcdlcm.mod
include/: CMakeLists.txt
include/asttool/: ASTDefinition.h  Class.h  ClassBuilder.h  ClassEmitter.h  Diagnostic.h  Lexer.h  Main.h  Parser.h  VarStore.h  Variables.def  ast.inc  asttool.inc
include/lalrtool/: Algo.h  Diagnostic.h  Grammar.h  GrammarBuilder.h  LR0Automaton.h  Lexer.h  Main.h  Parser.h  RAPEmitter.h  VarStore.h  Variables.def  lalrtool.ast  lalrtool.ast.inc  lalrtool.g  lalrtool.g.inc  lalrtool.lalr.g
include/lltool/: Algo.h  Diagnostic.h  Grammar.h  GrammarBuilder.h  Lexer.h  Main.h  Node.h  Parser.h  RDPEmitter.h  VarStore.h  Variables.def  lltool.g.inc  lltool.inc
include/m2lang/: LangLevel.h  Lexer.h  Token.h  TokenKinds.def  TokenKinds.h
include/m2lang/AST/: AST.h  ASTContext.h  ASTContextAllocate.h  PervasiveFunctions.def  PervasiveKinds.h  PervasiveTypeKinds.h  PervasiveTypes.def  Scope.h  ast.ast  ast.inc
include/m2lang/Basic/: Config.h  Diagnostic.def  Diagnostic.h  LLVM.h  LangOptions.def  LangOptions.h  SourceLocation.h  TargetInfo.h  TargetOptions.h  TokenKinds.def  TokenKinds.h  Version.h  Version.inc.in
include/m2lang/CodeGen/: CGDebug.h  CGModule.h  CGProcedure.h  CGTBAA.h  CGUtils.h  CodeGenerator.h
include/m2lang/Lexer/: Lexer.h  Preprocessor.h  Token.h
include/m2lang/Parser/: Parser.h
include/m2lang/Sema/: Scope.h  Sema.h
lib/: CMakeLists.txt  Lexer.cpp  TokenKinds.cpp
lib/AST/: AST.cpp  AST.cppm  ASTContext.cpp  ASTContext.cppm  CMakeLists.txt  Module.cppm  PervasiveKinds.cpp  PervasiveKinds.cppm  PervasiveTypeKinds.cpp  Scope.cpp  ast.ast  xmake.lua
lib/ASTtool/: CMakeLists.txt  ClassBuilder.cpp  ClassEmitter.cpp  Diagnostic.cpp  Lexer.cpp  Main.cpp  Parser.cpp  README.md  VarStore.cpp  asttool.ast  asttool.g  xmake.lua
lib/Basic/: Basic.cppm  CMakeLists.txt  Config.cppm  Diagnostic.cpp  Diagnostic.cppm  Diagnostic.def  LangOptions.cppm  LangOptions.def  TargetInfo.cpp  TargetInfo.cppm  TargetOptions.cppm  TokenKinds.cpp  TokenKinds.cppm  Version.cppm  Version.inc.in  xmake.lua
lib/CodeGen/: CGDebug.h  CGModule.cpp  CGModule.cppm  CGProcedure.cpp  CGProcedure.cppm  CGTBAA.cpp  CGTBAA.cppm  CGUnit.cppm  CGUtils.cpp  CMakeLists.txt  CodeGen.cpp  CodeGenerator.cpp  CodeGenerator.cppm  xmake.lua
lib/LALRtool/: Algo.cpp  CMakeLists.txt  Diagnostic.cpp  Grammar.cpp  GrammarBuilder.cpp  LR0Automaton.cpp  Lexer.cpp  Main.cpp  Parser.cpp  RAPEmitter.cpp  README.md  VarStore.cpp
lib/LLVM/: ADT.cppm  llvm.cppm  xmake.lua
lib/LLtool/: Algo.cpp  CMakeLists.txt  Diagnostic.cpp  Grammar.cpp  GrammarBuilder.cpp  Lexer.cpp  Main.cpp  Parser.cpp  RDPEmitter.cpp  README.md  VarStore.cpp  lltool.g  lltool.inc  xmake.lua
lib/Lexer/: CMakeLists.txt  DirectiveParser.g  DirectiveParser.inc  Lexer.cpp  Lexer.cppm  Module.cppm  Preprocessor.cpp  Preprocessor.cppm  Token.cppm  xmake.lua
lib/Parser/: CMakeLists.txt  M2Parser.cpp  M2Parser.cppm  M2Parser.h  Modula-2.g  Parser.cpp  Parser.cppm  modula-2.g  modula-2.inc  xmake.lua
lib/Sema/: CMakeLists.txt  Scope.cpp  Sema.cpp  Sema.cppm  xmake.lua
scripts/: vcenv.bat
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/M2/CodeGen/: Array1.mod  Call.mod  CheckModVisibility.mod  CheckModVisibility2.mod  CheckModVisibility3.mod  Enum.mod  For.mod  IfElse.mod  LocalMod.mod  Loop.mod  OpenArray.mod  PassByRef.mod  Pointer.mod  Repeat.mod  While.mod
test/M2/Directives/: Nested.mod
test/Unit/: lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  driver.cpp  xmake.lua
unittests/: CMakeLists.txt
unittests/LLtool/: AlgoTest.cpp  CMakeLists.txt  FirstFollowSetTest.cpp
unittests/Lexer/: CMakeLists.txt  LexerTest.cpp
utils/: README.md
utils/ASTtool/: ASTtool.cpp  CMakeLists.txt  xmake.lua
utils/LALRtool/: CMakeLists.txt  LALRtool.cpp
utils/LLtool/: Algo.cpp  Algo.h  CMakeLists.txt  Diagnostic.cpp  Grammar.cpp  Grammar.h  GrammarBuilder.cpp  GrammarBuilder.h  LLtool.cpp  Lexer.cpp  Lexer.h  Node.h  Parser.cpp  Parser.h  RDPEmitter.cpp  VarStore.cpp  VarStore.h  lltool.inc  xmake.lua
utils/m2lang-lit/: CMakeLists.txt
utils/vscode/: README.md
xmake/rules/: xmake.lua
